frb_rust/src/dart_api_dl/include/dart_api.h


typedef struct _Dart_Isolate* Dart_Isolate;
typedef struct _Dart_Handle* Dart_Handle;
typedef struct {
  int32_t version;
  bool enable_asserts;
  bool use_field_guards;
  bool use_osr;
  bool obfuscate;
  bool load_vmservice_library;
  bool copy_parent_code;
  bool null_safety;
  bool is_system_isolate;
  bool snapshot_is_dontneed_safe;
  bool branch_coverage;
} Dart_IsolateFlags;
typedef Dart_Isolate (*Dart_IsolateGroupCreateCallback)(
    const char* script_uri,
    const char* main,
    const char* package_root,
    const char* package_config,
    Dart_IsolateFlags* flags,
    void* isolate_data,
    char** error);
typedef bool (*Dart_InitializeIsolateCallback)(void** child_isolate_data,
                                               char** error);
typedef void (*Dart_IsolateShutdownCallback)(void* isolate_group_data,
                                             void* isolate_data);
typedef void (*Dart_IsolateCleanupCallback)(void* isolate_group_data,
                                            void* isolate_data);
typedef void (*Dart_IsolateGroupCleanupCallback)(void* isolate_group_data);
typedef void (*Dart_ThreadStartCallback)(void);
typedef void (*Dart_ThreadExitCallback)(void);
typedef void* (*Dart_FileOpenCallback)(const char* name, bool write);
typedef void (*Dart_FileReadCallback)(uint8_t** data,
                                      intptr_t* file_length,
                                      void* stream);
typedef void (*Dart_FileWriteCallback)(const void* data,
                                       intptr_t length,
                                       void* stream);
typedef void (*Dart_FileCloseCallback)(void* stream);
typedef bool (*Dart_EntropySource)(uint8_t* buffer, intptr_t length);
typedef Dart_Handle (*Dart_GetVMServiceAssetsArchive)(void);
#define DART_INITIALIZE_PARAMS_CURRENT_VERSION (0x00000007)
struct Dart_CodeObserver;
typedef void (*Dart_OnNewCodeCallback)(struct Dart_CodeObserver* observer,
                                       const char* name,
                                       uintptr_t base,
                                       uintptr_t size);
typedef struct Dart_CodeObserver {
  void* data;
  Dart_OnNewCodeCallback on_new_code;
} Dart_CodeObserver;
typedef const char* (*Dart_RegisterKernelBlobCallback)(
    const uint8_t* kernel_buffer,
    intptr_t kernel_buffer_size);
typedef void (*Dart_UnregisterKernelBlobCallback)(const char* kernel_blob_uri);
typedef struct {
  int32_t version;
  const uint8_t* vm_snapshot_data;
  const uint8_t* vm_snapshot_instructions;
  Dart_IsolateGroupCreateCallback create_group;
  Dart_InitializeIsolateCallback initialize_isolate;
  Dart_IsolateShutdownCallback shutdown_isolate;
  Dart_IsolateCleanupCallback cleanup_isolate;
  Dart_IsolateGroupCleanupCallback cleanup_group;
  Dart_ThreadStartCallback thread_start;
  Dart_ThreadExitCallback thread_exit;
  Dart_FileOpenCallback file_open;
  Dart_FileReadCallback file_read;
  Dart_FileWriteCallback file_write;
  Dart_FileCloseCallback file_close;
  Dart_EntropySource entropy_source;
  Dart_GetVMServiceAssetsArchive get_service_assets;
  bool start_kernel_isolate;
  Dart_CodeObserver* code_observer;
  Dart_RegisterKernelBlobCallback register_kernel_blob;
  Dart_UnregisterKernelBlobCallback unregister_kernel_blob;
} Dart_InitializeParams;
DART_EXPORT DART_WARN_UNUSED_RESULT char* Dart_Initialize(
    Dart_InitializeParams* params);
DART_EXPORT DART_WARN_UNUSED_RESULT char* Dart_Cleanup(void);
DART_EXPORT DART_WARN_UNUSED_RESULT char* Dart_SetVMFlags(int argc,
                                                          const char** argv);
DART_EXPORT bool Dart_IsVMFlagSet(const char* flag_name);
DART_EXPORT Dart_Isolate
Dart_CreateIsolateGroup(const char* script_uri,
                        const char* name,
                        const uint8_t* isolate_snapshot_data,
                        const uint8_t* isolate_snapshot_instructions,
                        Dart_IsolateFlags* flags,
                        void* isolate_group_data,
                        void* isolate_data,
                        char** error);
DART_EXPORT Dart_Isolate
Dart_CreateIsolateGroupFromKernel(const char* script_uri,
                                  const char* name,
                                  const uint8_t* kernel_buffer,
                                  intptr_t kernel_buffer_size,
                                  Dart_IsolateFlags* flags,
                                  void* isolate_group_data,
                                  void* isolate_data,
                                  char** error);
DART_EXPORT void Dart_ShutdownIsolate(void);
DART_EXPORT Dart_Isolate Dart_CurrentIsolate(void);
DART_EXPORT void* Dart_CurrentIsolateData(void);
DART_EXPORT void* Dart_IsolateData(Dart_Isolate isolate);
DART_EXPORT void* Dart_CurrentIsolateGroupData(void);
DART_EXPORT void* Dart_IsolateGroupData(Dart_Isolate isolate);
DART_EXPORT Dart_Handle Dart_DebugName(void);
DART_EXPORT const char* Dart_IsolateServiceId(Dart_Isolate isolate);
DART_EXPORT DART_WARN_UNUSED_RESULT Dart_Handle
Dart_CreateSnapshot(uint8_t** vm_snapshot_data_buffer,
                    intptr_t* vm_snapshot_data_size,
                    uint8_t** isolate_snapshot_data_buffer,
                    intptr_t* isolate_snapshot_data_size,
                    bool is_core);
DART_EXPORT void Dart_EnterScope(void);