dart_sys/src/lib.rs

#[doc = " Callback provided by the embedder that is used by the VM to notify on code"]
#[doc = " object creation, *before* it is invoked the first time."]
#[doc = " This is useful for embedders wanting to e.g. keep track of PCs beyond"]
#[doc = " the lifetime of the garbage collected code objects."]
#[doc = " Note that an address range may be used by more than one code object over the"]
#[doc = " lifecycle of a process. Clients of this function should record timestamps for"]
#[doc = " these compilation events and when collecting PCs to disambiguate reused"]
#[doc = " address ranges."]
pub type Dart_OnNewCodeCallback = ::std::option::Option<
    unsafe extern "C" fn(
        observer: *mut Dart_CodeObserver,
        name: *const ::std::os::raw::c_char,
        base: usize,
        size: usize,
    ),
>;

#[doc = " Forward declaration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Dart_CodeObserver {
    pub data: *mut ::std::os::raw::c_void,
    pub on_new_code: Dart_OnNewCodeCallback,
}

#[doc = " Describes how to initialize the VM. Used with Dart_Initialize."]
#[doc = ""]
#[doc = " \\param version Identifies the version of the struct used by the client."]
#[doc = "   should be initialized to DART_INITIALIZE_PARAMS_CURRENT_VERSION."]
#[doc = " \\param vm_isolate_snapshot A buffer containing a snapshot of the VM isolate"]
#[doc = "   or NULL if no snapshot is provided. If provided, the buffer must remain"]
#[doc = "   valid until Dart_Cleanup returns."]
#[doc = " \\param instructions_snapshot A buffer containing a snapshot of precompiled"]
#[doc = "   instructions, or NULL if no snapshot is provided. If provided, the buffer"]
#[doc = "   must remain valid until Dart_Cleanup returns."]
#[doc = " \\param initialize_isolate A function to be called during isolate"]
#[doc = "   initialization inside an existing isolate group."]
#[doc = "   See Dart_InitializeIsolateCallback."]
#[doc = " \\param create_group A function to be called during isolate group creation."]
#[doc = "   See Dart_IsolateGroupCreateCallback."]
#[doc = " \\param shutdown A function to be called right before an isolate is shutdown."]
#[doc = "   See Dart_IsolateShutdownCallback."]
#[doc = " \\param cleanup A function to be called after an isolate was shutdown."]
#[doc = "   See Dart_IsolateCleanupCallback."]
#[doc = " \\param cleanup_group A function to be called after an isolate group is shutdown."]
#[doc = "   See Dart_IsolateGroupCleanupCallback."]
#[doc = " \\param get_service_assets A function to be called by the service isolate when"]
#[doc = "    it requires the vmservice assets archive."]
#[doc = "    See Dart_GetVMServiceAssetsArchive."]
#[doc = " \\param code_observer An external code observer callback function."]
#[doc = "    The observer can be invoked as early as during the Dart_Initialize() call."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Dart_InitializeParams {
    pub version: i32,
    pub vm_snapshot_data: *const u8,
    pub vm_snapshot_instructions: *const u8,
    pub create_group: Dart_IsolateGroupCreateCallback,
    pub initialize_isolate: Dart_InitializeIsolateCallback,
    pub shutdown_isolate: Dart_IsolateShutdownCallback,
    pub cleanup_isolate: Dart_IsolateCleanupCallback,
    pub cleanup_group: Dart_IsolateGroupCleanupCallback,
    pub thread_exit: Dart_ThreadExitCallback,
    pub file_open: Dart_FileOpenCallback,
    pub file_read: Dart_FileReadCallback,
    pub file_write: Dart_FileWriteCallback,
    pub file_close: Dart_FileCloseCallback,
    pub entropy_source: Dart_EntropySource,
    pub get_service_assets: Dart_GetVMServiceAssetsArchive,
    pub start_kernel_isolate: bool,
    pub code_observer: *mut Dart_CodeObserver,
}

extern "C" {
    #[doc = " Initializes the VM."]
    #[doc = ""]
    #[doc = " \\param flags A struct containing initialization information. The version"]
    #[doc = "   field of the struct must be DART_INITIALIZE_PARAMS_CURRENT_VERSION."]
    #[doc = ""]
    #[doc = " \\return NULL if initialization is successful. Returns an error message"]
    #[doc = "   otherwise. The caller is responsible for freeing the error message."]
    pub fn Dart_Initialize(params: *mut Dart_InitializeParams) -> *mut ::std::os::raw::c_char;
}

extern "C" {
    #[doc = " Cleanup state in the VM before process termination."]
    #[doc = ""]
    #[doc = " \\return NULL if cleanup is successful. Returns an error message otherwise."]
    #[doc = "   The caller is responsible for freeing the error message."]
    pub fn Dart_Cleanup() -> *mut ::std::os::raw::c_char;
}

extern "C" {
    #[doc = " Sets command line flags. Should be called before Dart_Initialize."]
    #[doc = ""]
    #[doc = " \\param argc The length of the arguments array."]
    #[doc = " \\param argv An array of arguments."]
    #[doc = ""]
    #[doc = " \\return NULL if successful. Returns an error message otherwise."]
    #[doc = "  The caller is responsible for freeing the error message."]
    pub fn Dart_SetVMFlags(
        argc: ::std::os::raw::c_int,
        argv: *mut *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}

extern "C" {
    #[doc = " Returns true if the named VM flag is set."]
    pub fn Dart_IsVMFlagSet(flag_name: *const ::std::os::raw::c_char) -> bool;
}

extern "C" {
    #[doc = " Creates a new isolate. The new isolate becomes the current isolate."]
    #[doc = ""]
    #[doc = " A snapshot can be used to restore the VM quickly to a saved state"]
    #[doc = " and is useful for fast startup. If snapshot data is provided, the"]
    #[doc = " isolate will be started using that snapshot data. Requires a core snapshot or"]
    #[doc = " an app snapshot created by Dart_CreateSnapshot or"]
    #[doc = " Dart_CreatePrecompiledSnapshot* from a VM with the same version."]
    #[doc = ""]
    #[doc = " Requires there to be no current isolate."]
    #[doc = ""]
    #[doc = " \\param script_uri The main source file or snapshot this isolate will load."]
    #[doc = "   The VM will provide this URI to the Dart_IsolateGroupCreateCallback when a child"]
    #[doc = "   isolate is created by Isolate.spawn. The embedder should use a URI that"]
    #[doc = "   allows it to load the same program into such a child isolate."]
    #[doc = " \\param name A short name for the isolate to improve debugging messages."]
    #[doc = "   Typically of the format 'foo.dart:main()'."]
    #[doc = " \\param isolate_snapshot_data"]
    #[doc = " \\param isolate_snapshot_instructions Buffers containing a snapshot of the"]
    #[doc = "   isolate or NULL if no snapshot is provided. If provided, the buffers must"]
    #[doc = "   remain valid until the isolate shuts down."]
    #[doc = " \\param flags Pointer to VM specific flags or NULL for default flags."]
    #[doc = " \\param callback_data Embedder data.  This data will be passed to"]
    #[doc = "   the Dart_IsolateGroupCreateCallback when new isolates are spawned from"]
    #[doc = "   this parent isolate."]
    #[doc = " \\param error Returns NULL if creation is successful, an error message"]
    #[doc = "   otherwise. The caller is responsible for calling free() on the error"]
    #[doc = "   message."]
    #[doc = ""]
    #[doc = " \\return The new isolate on success, or NULL if isolate creation failed."]
    pub fn Dart_CreateIsolateGroup(
        script_uri: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        isolate_snapshot_data: *const u8,
        isolate_snapshot_instructions: *const u8,
        flags: *mut Dart_IsolateFlags,
        isolate_group_data: *mut ::std::os::raw::c_void,
        isolate_data: *mut ::std::os::raw::c_void,
        error: *mut *mut ::std::os::raw::c_char,
    ) -> Dart_Isolate;
}

extern "C" {
    #[doc = " Creates a new isolate from a Dart Kernel file. The new isolate"]
    #[doc = " becomes the current isolate."]
    #[doc = ""]
    #[doc = " Requires there to be no current isolate."]
    #[doc = ""]
    #[doc = " \\param script_uri The main source file or snapshot this isolate will load."]
    #[doc = "   The VM will provide this URI to the Dart_IsolateGroupCreateCallback when a child"]
    #[doc = "   isolate is created by Isolate.spawn. The embedder should use a URI that"]
    #[doc = "   allows it to load the same program into such a child isolate."]
    #[doc = " \\param name A short name for the isolate to improve debugging messages."]
    #[doc = "   Typically of the format 'foo.dart:main()'."]
    #[doc = " \\param kernel_buffer"]
    #[doc = " \\param kernel_buffer_size A buffer which contains a kernel/DIL program. Must"]
    #[doc = "   remain valid until isolate shutdown."]
    #[doc = " \\param flags Pointer to VM specific flags or NULL for default flags."]
    #[doc = " \\param callback_data Embedder data.  This data will be passed to"]
    #[doc = "   the Dart_IsolateGroupCreateCallback when new isolates are spawned from"]
    #[doc = "   this parent isolate."]
    #[doc = " \\param error Returns NULL if creation is successful, an error message"]
    #[doc = "   otherwise. The caller is responsible for calling free() on the error"]
    #[doc = "   message."]
    #[doc = ""]
    #[doc = " \\return The new isolate on success, or NULL if isolate creation failed."]
    pub fn Dart_CreateIsolateGroupFromKernel(
        script_uri: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        kernel_buffer: *const u8,
        kernel_buffer_size: isize,
        flags: *mut Dart_IsolateFlags,
        isolate_group_data: *mut ::std::os::raw::c_void,
        isolate_data: *mut ::std::os::raw::c_void,
        error: *mut *mut ::std::os::raw::c_char,
    ) -> Dart_Isolate;
}

extern "C" {
    #[doc = " Shuts down the current isolate. After this call, the current isolate is NULL."]
    #[doc = " Any current scopes created by Dart_EnterScope will be exited. Invokes the"]
    #[doc = " shutdown callback and any callbacks of remaining weak persistent handles."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_ShutdownIsolate();
}

extern "C" {
    #[doc = " Returns the current isolate. Will return NULL if there is no"]
    #[doc = " current isolate."]
    pub fn Dart_CurrentIsolate() -> Dart_Isolate;
}

extern "C" {
    #[doc = " Returns the callback data associated with the current isolate. This"]
    #[doc = " data was set when the isolate got created or initialized."]
    pub fn Dart_CurrentIsolateData() -> *mut ::std::os::raw::c_void;
}

extern "C" {
    #[doc = " Returns the callback data associated with the given isolate. This"]
    #[doc = " data was set when the isolate got created or initialized."]
    pub fn Dart_IsolateData(isolate: Dart_Isolate) -> *mut ::std::os::raw::c_void;
}

extern "C" {
    #[doc = " Returns the callback data associated with the current isolate group. This"]
    #[doc = " data was passed to the isolate group when it was created."]
    pub fn Dart_CurrentIsolateGroupData() -> *mut ::std::os::raw::c_void;
}

extern "C" {
    #[doc = " Returns the callback data associated with the specified isolate group. This"]
    #[doc = " data was passed to the isolate when it was created."]
    #[doc = " The embedder is responsible for ensuring the consistency of this data"]
    #[doc = " with respect to the lifecycle of an isolate group."]
    pub fn Dart_IsolateGroupData(isolate: Dart_Isolate) -> *mut ::std::os::raw::c_void;
}

extern "C" {
    #[doc = " Returns the debugging name for the current isolate."]
    #[doc = ""]
    #[doc = " This name is unique to each isolate and should only be used to make"]
    #[doc = " debugging messages more comprehensible."]
    pub fn Dart_DebugName() -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns the ID for an isolate which is used to query the service protocol."]
    #[doc = ""]
    #[doc = " It is the responsibility of the caller to free the returned ID."]
    pub fn Dart_IsolateServiceId(isolate: Dart_Isolate) -> *const ::std::os::raw::c_char;
}
